[package]
name = "bilive"
version = "0.1.0"
authors = ["mapkts <vilscrolls@gmail.com>"]
edition = "2018"
description = "A Command Line Danmu Printer and Data Collector for Bilibi TV."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
byteorder = "1.3"
chrono = "0.4"
clap = "~2.33.0"