[package]
name = "biliver"
version = "0.1.0"
authors = ["mapkts <vilscrolls@gmail.com>"]
edition = "2018"
description = "A Command Line Danmu Printer and Data Collector for Bilibili TV."

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
byteorder = "1.3"
chrono = "0.4"
clap = "~2.33.0"
flate2 = "1.0"
reqwest = { version = "0.10.4", features = ["blocking"] }